// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkSwitch dark mode should disable theming if the required attribute is omitted 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(109, 159, 235)"
  trackColorForFalse="rgb(44, 44, 46)"
  trackColorForTrue="rgba(109, 159, 235, 0.5)"
  trackTintColor="rgba(109, 159, 235, 0.5)"
/>
`;

exports[`Android BpkSwitch dark mode should render correctly 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(99, 99, 102)"
  trackColorForFalse="rgb(44, 44, 46)"
  trackColorForTrue="rgba(109, 159, 235, 0.5)"
  trackTintColor="rgb(44, 44, 46)"
/>
`;

exports[`Android BpkSwitch dark mode should support the "value" prop 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(109, 159, 235)"
  trackColorForFalse="rgb(44, 44, 46)"
  trackColorForTrue="rgba(109, 159, 235, 0.5)"
  trackTintColor="rgba(109, 159, 235, 0.5)"
/>
`;

exports[`Android BpkSwitch dark mode should support theming 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="red"
  trackColorForFalse="rgb(44, 44, 46)"
  trackColorForTrue="rgba(255, 0, 0, 0.5)"
  trackTintColor="rgba(255, 0, 0, 0.5)"
/>
`;

exports[`Android BpkSwitch light mode should disable theming if the required attribute is omitted 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(7, 112, 227)"
  trackColorForFalse="rgb(221, 221, 229)"
  trackColorForTrue="rgba(7, 112, 227, 0.32)"
  trackTintColor="rgba(7, 112, 227, 0.32)"
/>
`;

exports[`Android BpkSwitch light mode should render correctly 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(241, 242, 248)"
  trackColorForFalse="rgb(221, 221, 229)"
  trackColorForTrue="rgba(7, 112, 227, 0.32)"
  trackTintColor="rgb(221, 221, 229)"
/>
`;

exports[`Android BpkSwitch light mode should support the "value" prop 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(7, 112, 227)"
  trackColorForFalse="rgb(221, 221, 229)"
  trackColorForTrue="rgba(7, 112, 227, 0.32)"
  trackTintColor="rgba(7, 112, 227, 0.32)"
/>
`;

exports[`Android BpkSwitch light mode should support theming 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="red"
  trackColorForFalse="rgb(221, 221, 229)"
  trackColorForTrue="rgba(255, 0, 0, 0.32)"
  trackTintColor="rgba(255, 0, 0, 0.32)"
/>
`;
